crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__macro_params.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: "macro swap(a, b) { quote { (unquote(b), unquote(a)) } }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 56,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Macro(
            MacroDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: "swap",
                },
                params: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 12,
                            },
                            end: Position {
                                line: 1,
                                column: 13,
                            },
                        },
                        value: "a",
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 15,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        value: "b",
                    },
                ],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 19,
                        },
                        end: Position {
                            line: 1,
                            column: 55,
                        },
                    },
                    value: " quote { (unquote(b), unquote(a)) } ",
                },
            },
        ),
    },
}
