crates/alder-parse/src/item/snapshots/alder_parse__item__macro___tests__macro_pub.snap
---
source: crates/alder-parse/src/item/macro_.rs
description: "pub macro id(x) { x }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 22,
        },
    },
    value: Item {
        attributes: [],
        visibility: Pub(
            Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        ),
        kind: Macro(
            MacroDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: "id",
                },
                params: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                        value: "x",
                    },
                ],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 18,
                        },
                        end: Position {
                            line: 1,
                            column: 21,
                        },
                    },
                    value: " x ",
                },
            },
        ),
    },
}
